<resources>
    <string name="app_name">JumpingMindTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beer_image">beer image</string>
    <string name="latest_and_greatest_beers">Latest and Greatest Beers</string>
    <string name="like_btn">like btn</string>
    <string name="your_liked_beers">Your Liked Beers</string>
    <string name="back_arrow">back arrow</string>
    <string name="liked_items">liked items</string>
    <string name="you_have_not_liked_any_beers_yet">You have not liked any Beers yet!</string>
</resources>