<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.FavBeer">


    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_regular"
        android:text="@string/your_liked_beers"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeading" />

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_arrow" />

    <TextView
        android:id="@+id/textViewNoFav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_24ssp"
        android:textAlignment="center"
        android:fontFamily="@font/gilroy_regular"
        android:textColor="@color/black"
        android:visibility="gone"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:text="@string/you_have_not_liked_any_beers_yet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeading"
        tools:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>