<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="beerItem"
            type="com.mihir.jumpingmindtask.model.BeerDataItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screen.BeerDetails">

        <ImageView
            android:id="@+id/img_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/like_button_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/like_btn" />

        <ImageView
            android:id="@+id/imgViewbeer"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_200sdp"
            loadImg="@{beerItem.image_url}"
            android:transitionName="img"
            android:layout_marginTop="@dimen/_4sdp"
            android:contentDescription="@string/beer_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNameDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@{beerItem.name}"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:transitionName="title"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imgViewbeer"
            tools:text="Buzz" />

        <TextView
            android:id="@+id/txtVTagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            setTagLine="@{beerItem.tagline}"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/gilroy_regular"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/textViewNameDetails"
            app:layout_constraintStart_toStartOf="@id/textViewNameDetails"
            app:layout_constraintEnd_toEndOf="@id/textViewNameDetails"
            tools:text="Post Modern Classic. Spiky. Tropical. Hoppy."/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txtVTagline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtVBrewedDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    setFirstDateText="@{beerItem.first_brewed}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="First Brewed on: 04/2007" />

                <TextView
                    android:id="@+id/textViewDescDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@{beerItem.description}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:transitionName="desc"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtVBrewedDate"
                    tools:text="Lightly crisp and bitter IPA brewed with English and American hops" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_32sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_32sdp" />

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>